--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Mi primer página  &aacute; &Ntilde; </title>
+    <style>
+        body {
+            background-color: #abc;
+            background-repeat: no-repeat;
+        }
+
+        b, u  {
+            color: navy;
+        }
+
+        h1, p {
+            font-family: Arial, Monospaced, Courier;
+
+        }
+
+    </style>
 </head>
 
-<body>
+<body background="images.jpg" no repeat>
+
 <h1> Pagina con ejemplos </h1>
 <h3> Pagina con ejemplos </h3>
 <h5> Pagina con <i>ejemplos</i> </h5>
@@ -21,7 +38,7 @@
 
 <p align="right"> el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera </p>
 
-<p align="justify"> el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera </p>
+<p align="justify" style="font-family: Courier; color: red;"> el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera </p>
 
 </body>
 </html>
