--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Mi primer página  &aacute; &Ntilde; </title>
     <style>
         body {
+            background-image: url(images.jpg);
             background-color: #abc;
             background-repeat: no-repeat;
         }
@@ -18,10 +19,16 @@
 
         }
 
+        table{
+            background-color: azure;
+        }
+        th{
+            background-color: bisque;
+        }
     </style>
 </head>
 
-<body background="images.jpg" no repeat>
+<body>
 
 <h1> Pagina con ejemplos </h1>
 <h3> Pagina con ejemplos </h3>
@@ -32,13 +39,16 @@
 <u> underline = subrayado</u> <br>
 <b> negritas <i>italic <u>bold</u></i> negritas</b> <br>
 
-<p> el texto  que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera </p>
-
-<p align="center"> el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera </p>
-
-<p align="right"> el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera </p>
-
-<p align="justify" style="font-family: Courier; color: red;"> el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera  el texto que yo quiera </p>
+<table border="1">
+    <tr><th>Alumno</th><th>Materia</th></tr>
+    <tr><td>Pedro</td><td>Matemáticas</td></tr>
+    <tr><td>Sandra</td><td style="background-color: darkcyan">Algebra</td></tr>
+</table>
 
 </body>
 </html>
+
+
+
+
+
