con forma para datos

--- a/index.html
+++ b/index.html
@@ -40,10 +40,18 @@
 <b> negritas <i>italic <u>bold</u></i> negritas</b> <br>
 
 <table border="1">
+    <tr><th colspan="2">Datos de los alumnos</th></tr>
     <tr><th>Alumno</th><th>Materia</th></tr>
     <tr><td>Pedro</td><td>Matemáticas</td></tr>
     <tr><td>Sandra</td><td style="background-color: darkcyan">Algebra</td></tr>
 </table>
+
+
+<form action="http://www.google.com">
+    <input type="text" name="consulta">
+
+    <input type="submit">
+</form>
 
 </body>
 </html>
