con formulario a google

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 </table>
 
 
-<form action="http://www.google.com">
+<form action="http://www.google.com" method="get" >
     <input type="text" name="consulta">
 
-    <input type="submit">
+    <input value="Enviar consulta a google" type="submit">
 </form>
 
 </body>
