ejemplos JS + HTML

--- a/html/index.html
+++ b/html/index.html
@@ -1,62 +1,43 @@
+<!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
-    <title>Mi primer página  &aacute; &Ntilde; </title>
-    <style>
-        body {
-            background-image: url(images.jpg);
-            background-color: #abc;
-            background-repeat: no-repeat;
-        }
-
-        b, u  {
-            color: navy;
-        }
-
-        h1, p {
-            font-family: Arial, Monospaced, Courier;
-
-        }
-
-        table{
-            background-color: azure;
-        }
-        th{
-            background-color: bisque;
-        }
-    </style>
+    <title>Ejemplo de HTML</title>
 </head>
-
 <body>
 
-<h1> Pagina con ejemplos </h1>
-<h3> Pagina con ejemplos </h3>
-<h5> Pagina con <i>ejemplos</i> </h5>
+<h1> Primer ejemplo</h1>
 
-<b> bold = negritas</b> <br>
-<i> italic = cursivas</i> <br>
-<u> underline = subrayado</u> <br>
-<b> negritas <i>italic <u>bold</u></i> negritas</b> <br>
-
-<table border="1">
-    <tr><th colspan="2">Datos de los alumnos</th></tr>
-    <tr><th>Alumno</th><th>Materia</th></tr>
-    <tr><td>Pedro</td><td>Matemáticas</td></tr>
-    <tr><td>Sandra</td><td style="background-color: darkcyan">Algebra</td></tr>
-</table>
+<ul>
+    <li> Física</li>
+    <li> Matemáticas</li>
+    <li> Programación <b>estructurada </b></li>
+</ul>
 
 
-<form action="http://www.google.com" method="get" >
-    <input type="text" name="consulta">
+<ol>
+    <li> Física</li>
+    <li> Matemáticas</li>
+    <li> Programación <b>estructurada </b></li>
+</ol>
 
-    <input value="Enviar consulta a google" type="submit">
-</form>
+
+
+<H1>Estilos de caracter</H1>
+Un ejemplo de texto de <EM>realzado</EM>.<br>
+Un ejemplo de texto de <STRONG>realzado</STRONG>.<br>
+Un ejemplo de texto de <CODE>realzado</CODE>.<br>
+Un ejemplo de texto de <SAMP>realzado</SAMP>.<br>
+Un ejemplo de texto de <KDB>realzado</KDB>.<br>
+Un ejemplo de texto de <VAR>realzado</VAR>.<br>
+Un ejemplo de texto de <DFN>realzado</DFN>.<br>
+Un ejemplo de texto de <CITE>realzado</CITE>.<br>
+<br>
+Un ejemplo de texto de <B>realzado</B>.<br>
+Un ejemplo de texto de <I>realzado</I>.<br>
+Un ejemplo de texto de <U>realzado</U>.<br>
+Un ejemplo de texto de <TT>realzado</TT>.<br>
+
 
 </body>
 </html>
-
-
-
-
-
