actualización con eventos de teclado

--- a/html/animar04.html
+++ b/html/animar04.html
@@ -17,11 +17,13 @@
             switch (code) {
                 case 37: alert("Left"); break; //Left key
                 case 38: alert("Up"); break; //Up key
-                case 39: alert("Right"); break; //Right key
+                case 39: moverDerecha(); break; //Right key
                 case 40: alert("Down"); break; //Down key
                 default: alert(code); //Everything else
             }
         }
+        var posx=0;
+        var posy=0;
 
     </script>
 </head>
